--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,38 +1,56 @@
 @misc{computecpp,
     author = {{Codeplay Software Ltd.}},
     title = {ComputeCpp},
-    note = {Online; \url{https://www.codeplay.com/products/computesuite/computecpp}, zuletzt abgerufen am 19. August 2019}
+    url = {https://www.codeplay.com/products/computesuite/computecpp},
+    urldate = {2019-08-19}
 }
 
 @misc{hipsycl,
     author = {Alpay, Aksel},
     title = {hipSYCL -- Implementation of SYCL 1.2.1 over AMD HIP/NVIDIA CUDA},
-    note = {Online; \url{https://github.com/illuhad/hipSYCL}, zuletzt abgerufen am 19. August 2019}
+    url = {https://github.com/illuhad/hipSYCL},
+    urldate = {2019-08-19}
 }
 
 @misc{intelsycl,
     author = {Bader, Alexey and Lazarev, Vladimir and Airlie, Dave and Faye-Lund, Erik and Podchishchaeva, Mariya and Chen, Kurt and Klochkov, Vyacheslav and Toguchi, Michael and Savonichev, Andrew and Blower, Melanie and Bobrovsky, Konstantin and Chittireddy, Sindhu and Maksimova, Viktoria and Brodman, James and Sidorov, Dmitry and Pennycook, John and Gindinson, Artem and Voronov, Alexey and Gainullin, Artur and Semenov, Sergey and Gupta, Garima and Romanov, Vlad and Keir, Paul and Hammond, Jeff and Premanand, Rao and Keane, Erich and Merritt, Steve and Dai, Chunyang and Zverev, Sergey and Andrews, Elizabeth and Lomuller, Victor and Batashev, Alexander and Karachun, Ivan and Yan, Domi and Cranmer, Joshua and Kinsner, Michael and Reyes, Ruyman and Wood, David and Lychkov, Mikhail and Dmitriev, Sergey and Tian, Shilei and Sotkin, Alexey and Narayanaswamy, Ravi and Stepykin, Ilya and Gozillon, Andrew and Adams, Stuart and Stephan, Jan and Mendel, Mark and Maslov, Sergey and Dubinov, Igor},
     title = {Intel Project for LLVM technology},
-    note = {Online; \url{https://github.com/intel/llvm}, zuletzt abgerufen am 19. August 2019}
+    url = {https://github.com/intel/llvm},
+    urldate = {2019-08-19}
 }
 
 @misc{sycltech,
     author = {{Codeplay Software Ltd.}},
     title = {sycl.tech},
-    note = {Online; \url{http://sycl.tech}, zuletzt abgerufen am 19. August 2019}
+    url = {http://sycl.tech},
+    urldate = {2019-08-19}
 }
 
 @misc{trisycl,
     author = {Keryell, Ronan and Honorat, Alexandre and Thibault, Joan and Nagy-Egri, Máté Ferenc and Kallioniemi, Ville and Doumoulakis, Anastasios and Hsu, Min-Yih and Perkins, Hugh and Yu, Lin-Ya and Salzmann, Philip and Airlie, Dave and Withaar, Thijs and Gozillon, Andrew and Amstutz, Jefferson and Keir, Paul and Ficarelli, Federico and Dulek, Ruben},
     title = {triSYCL -- Generic system"=wide modern C++ for heterogeneous platforms with SYCL from Khronos Group},
-    note = {Online; \url{https://github.com/triSYCL/triSYCL}, zuletzt abgerufen am 19. August 2019}
+    url = {https://github.com/triSYCL/triSYCL},
+    urldate = {2019-08-19}
 }
 
 @misc{trisyclclang,
     author = {Keryell, Ronan and Gozillon, Andrew and Lezaud, Victor},
     title = {sycl -- Experimental fusion of triSYCL with Intel SYCL upstreaming effort into Clang/LLVM},
-    note = {Online; \url{https://github.com/triSYCL/sycl}, zuletzt abgerufen am 19. August 2019}
+    url = {https://github.com/triSYCL/sycl},
+    urldate = {2019-08-19}
 }
+
+@article{lawson1979,
+    author = {Lawson, Charles L. and Hanson, Richard J. and Kincaid, David Ronald and Krogh, Fred T.},
+    title = {Basic Linear Algebra Subprograms for Fortran Usage},
+    journal = {ACM Transactions on Mathematical Software},
+    volume = {Jahrgang 5},
+    number = {Ausgabe 3},
+    year = 1979,
+    month = sep,
+    pages = {308--323}
+}
+
 
 @inproceedings{liao1997,
     author = {Liao, Stan and Tjiang, Steve and Gupta, Rajesh},
@@ -48,10 +66,9 @@
     author = {{Electronics Weekly}},
     title = {STM, Synopsys in 3-year R\&D deal},
     journal = {Electronics Weekly},
-    year = 1999,
-    month = dec,
-    note = {Online; \url{https://www.electronicsweekly.com/news/archived/resources-archived/stm-synopsys-in-3-year-rampd-deal-1999-12/},
-            zuletzt abgerufen am 15. September 2019}
+    date = {1999-12-07},
+    url = {https://www.electronicsweekly.com/news/archived/resources-archived/stm-synopsys-in-3-year-rampd-deal-1999-12/},
+    urldate = {2019-09-15}
 }
 
 @inproceedings{howes2006,
@@ -73,6 +90,15 @@
     isbn = {978-1-891-12107-4}
 }
 
+@article{khronosspir2012,
+    author = {{Khronos Group}},
+    title = {Khronos SPIR 1.0 Specification for OpenCL now available},
+    date = {2012-09-13},
+    journal = {The Khronos Group Inc},
+    url = {https://www.khronos.org/news/permalink/khronos-spir-1.0-specification-for-opencl-now-available},
+    urldate = {2019-09-29}
+}
+
 @inproceedings{gaster2013,
     author = {Gaster, Benedict R. and Howes, Lee},
     title = {OpenCL C++},
@@ -92,6 +118,14 @@
     isbn = {978-3-486-73181-1}
 }
 
+@article{khronos2014,
+    author = {{Khronos Group}},
+    title = {Khronos Releases SYCL 1.2 Provisional Specification},
+    date = {2014-03-19},
+    journal = {The Khronos Group Inc},
+    url = {https://www.khronos.org/news/press/khronos-releases-sycl-1.2-provisional-specification},
+    urldate = {2019-09-26}
+}
 
 @techreport{wong2016,
     author = {Wong, Michael and Richards, Andrew and Rovatsou, Maria and Reyes, Ruyman},
@@ -183,8 +217,8 @@
     year = 2018,
     month = mar,
     journal = {IEEE Micro},
-    volume = {Volume 38},
-    number = {Issue 2},
+    volume = {Jahrgang 38},
+    number = {Ausgabe 2},
     pages = {8--20},
     doi = {10.1109/MM.2018.022071131}
 }
